crates/cli/tests/snapshots/activate_test__activate__export__can_include_global_tools-4.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
unset-env PROTO_VERSION;
set-env _PROTO_ACTIVATED_PATH '<WORKSPACE>/.proto/shims:<WORKSPACE>/.proto/bin';
