crates/cli/tests/snapshots/activate_test__activate__export__includes_shared_env_if_no_tools-12.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---

$KEY = value
del $PROTO_VERSION
$_PROTO_ACTIVATED_ENV = KEY
$_PROTO_ACTIVATED_PATH = '<WORKSPACE>/.proto/shims:<WORKSPACE>/.proto/bin'
